Re-factored Gaffer Redland plug-in for a simpler structure.  Less memory copying, Gaffer comms module has no knowledge of my schema now.  Will make it much easier to add transactions.

--- a/redland/Makefile
+++ b/redland/Makefile
@@ -5,7 +5,7 @@ LIBS=-lrasqal -lrdf
 
 SQLITE_FLAGS=-DSTORE=\"sqlite\" -DSTORE_NAME=\"STORE.db\"
 
-GAFFER_FLAGS=-DSTORE=\"gaffer\" -DSTORE_NAME=\"http://localhost:8080/\"
+GAFFER_FLAGS=-DSTORE=\"gaffer\" -DSTORE_NAME=\"http://localhost:8080/example-rest/v1\"
 
 all: test-sqlite test-gaffer librdf_storage_gaffer.so
 
@@ -21,13 +21,28 @@ test-sqlite.o: test.C
 test-gaffer.o: test.C
 	${CXX} ${CXXFLAGS} -c $< -o $@ ${GAFFER_FLAGS}
 
-test-sqlite.o test-gaffer.o gaffer.o gaffer_comms.o: gaffer_comms.h
+mytest: mytest.o gaffer_comms.o gaffer_query.o
+	${CC} ${CFLAGS} mytest.o gaffer_comms.o gaffer_query.o \
+		-ljson-c -lcurl -o $@
 
-librdf_storage_gaffer.so: gaffer.o gaffer_comms.o
-	${CXX} ${CXXFLAGS} -shared -o $@ gaffer.o gaffer_comms.o -lsqlite3 \
+GAFFER_OBJECTS=gaffer.o gaffer_comms.o gaffer_query.o
+
+librdf_storage_gaffer.so: ${GAFFER_OBJECTS}
+	${CXX} ${CXXFLAGS} -shared -o $@ ${GAFFER_OBJECTS} -lsqlite3 \
 		-ljson-c -lrdf
 
 gaffer.o: CFLAGS += -DHAVE_CONFIG_H -DLIBRDF_INTERNAL=1 
 
 install: all
 	sudo cp librdf_storage_gaffer.so /usr/lib64/redland
+
+depend:
+	makedepend -Y -I. *.c *.C
+
+# DO NOT DELETE
+
+gaffer.o: ./gaffer_comms.h ./gaffer_query.h
+gaffer_comms.o: ./gaffer_comms.h ./gaffer_query.h
+gaffer-comms-test.o: ./gaffer_comms.h ./gaffer_query.h
+gaffer_query.o: ./gaffer_query.h
+mytest.o: ./gaffer_comms.h ./gaffer_query.h
