Fixed a crashing problem in sparql endpoint, and added systemd integration.

--- a/sparql/Makefile
+++ b/sparql/Makefile
@@ -1,6 +1,12 @@
 
 CXXFLAGS += -I/usr/include/raptor2 -I/usr/include/rasqal
 
+all: sparql
+
+install:
+	sudo cp sparql /usr/local/bin/
+	sudo cp sparql.service /usr/lib/systemd/system/sparql.service
+
 sparql: sparql.o
 	${CXX} ${CXXFLAGS} sparql.o -o sparql -lrdf -lmicrohttpd
 
