SPARQL endpoint is integrated with systemd, inetd-style.  New process is spawned for each connection, allowing parallel query.
Also, fixes a problem with SPARQL-to-Gaffer web problem where things hang,
causing the queue to block permanently.

However, unwanted SPARQL deamons hang around indefinitely, needs fixing.

--- a/sparql/sparql@.service
+++ b/sparql/sparql@.service
@@ -1,9 +1,13 @@
 [Unit]
 Description=SPARQL endpoint per-connection server daemon
+Requires=sparql.socket
 
 [Service]
 ExecStart=/usr/local/bin/sparql
 StandardInput=socket
-StandardOutput=socket
 StandardError=journal
+TimeoutStopSec=5
+
+[Install]
+WantedBy=multi-user.target
 
